# dev-template

./: CLAUDE.md  CLAUDE.md.template  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: branch.md  commit.md  pr.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  merge-docs.yml  pr-changelog.yml  pr-summary.yml
app/: __init__.py
app/routes/: __init__.py  apps.py  auth.py  dashboard.py  proxy.py  resources.py  settings.py
app/services/: __init__.py  app_manager.py  config_loader.py  database.py  github_client.py  log_manager.py  models.py  resource_monitor.py  script_executor.py
app/static/css/: common.css  style.css
app/static/js/: main.js  sidebar.js
app/templates/: base.html  dashboard.html  login.html  resources.html
app/templates/apps/: detail.html  index.html
app/templates/settings/: app_install.html  index.html  logging.html  logs.html  password.html  resource.html  server.html  session.html  users.html  (+1 more)
config/: apps.yaml  config.yaml
docs/: 11_ポータルアプリ仕様書.md  requirements.md
docs/仕様書/: GitHub運用仕様書.md  ログ設計仕様書.md  設定仕様書.md
scripts/: install.bat  install.sh  pol-lab-portal.service  setup.sh
tests/: conftest.py
tests/test_routes/: __init__.py  test_apps.py  test_auth.py  test_dashboard.py  test_proxy.py  test_resources.py  test_settings.py
tests/test_services/: __init__.py  test_app_manager.py  test_config_loader.py  test_database.py  test_github_client.py  test_log_manager.py  test_resource_monitor.py  test_script_executor.py
