[project]
name = "pol-lab-portal"
version = "0.1.0"
description = "POL統合ポータル・リソース管理システム"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "flask-login>=0.6",
    "psutil>=5.9",
    "bcrypt>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
